# Friendly-LwM2M-Client

./: .cproject  .gitignore  .gitmodules  .project  2305-WakaamaPlus.code-workspace  CMakeLists.txt  LICENSE  License  README.md  vs-code-cmake-kits.json  vs-code-wakaamaplus.code-workspace  vs-code-wpp.code-workspace  wakaama_env.sh  wpp_env_setup.sh
doxg/: CMakeLists.txt  Doxygen  doxygen_setup.sh  layoutfile.xml
doxg/description/: architecture.md  build.md  overview.md  rpi_setup.md
doxg/description/images/: build_6.png.old_version
examples/: CMakeLists.txt  dep.h  initialize_info.json  libcoap_build.sh  main.cpp  objects.cpp  objects.h
examples/ConnectivityMonitoring/: CMakeLists.txt  ConnectivityMonitoring.cpp  ConnectivityMonitoring.h
examples/Device/: CMakeLists.txt  Device.cpp  Device.h
examples/FirmwareUpdate/: CMakeLists.txt  FirmwareChecker.h  FirmwareUpdate.cpp  FirmwareUpdate.h  FwDownloaderHttp.h  FwDownloaderStub.h
examples/FirmwareUpdate/downloader/: CMakeLists.txt  FwDownloaderCoap.h  FwDownloaderHttp.h
examples/FirmwareUpdate/downloader/auto/: FwAutoDownloader.h
examples/FirmwareUpdate/downloader/uri/: FwDownloaderCoap.h  FwDownloaderHttp.h  FwUriDownloader.h
examples/FirmwareUpdate/fw_examples/: NOT_ENOUGH_FLASH.fw  UPD_FAIL.fw
examples/FirmwareUpdater/: FirmwareChecker.h  FirmwareUpdater.cpp
examples/FirmwareUpdater/downloader/uri/: CMakeLists.txt  FwDownloaderHttp.h  FwUriDownloader.h
examples/FirmwareUpdater/fw_examples/: CONN_LOST.fw  INTEGRITY_CHECK_FAIL.fw  OUT_OF_RAM.fw  UNSUPPORTED_PKG_TYPE.fw
examples/Lwm2mAccessControl/: CMakeLists.txt  Lwm2mAccessControl.cpp  Lwm2mAccessControl.h
examples/Lwm2mSecurity/: CMakeLists.txt  Lwm2mSecurity.cpp  Lwm2mSecurity.h
examples/Lwm2mServer/: CMakeLists.txt  Lwm2mServer.cpp  Lwm2mServer.h
examples/access_control/: AccessControl.h  CMakeLists.txt
examples/coap/: libcoap_build.sh
examples/connection/: Connection.cpp  Connection.h
examples/connectivity_monitoring/: ConnectivityMonitoring.h
examples/device/: CMakeLists.txt  Device.h
examples/firmware_update/: CMakeLists.txt  FwUpdate.h
examples/linux/: CMakeLists.txt  compiler_config.cmake  libcoap_build.sh  objects.cpp
examples/platform/: CMakeLists.txt  Guard.cpp  Platform.cpp  Platform.h
examples/platform/connection/: Connection.cpp  Connection.h
examples/platform/connection_dtls/: CMakeLists.txt  Connection.cpp  Connection.h
examples/raspberry_pi/: CMakeLists.txt  compiler_config.cmake  libcoap_build.sh  main.cpp  objects.cpp  objects.h  wpp_config.cmake
examples/raspberry_pi/drivers/: gpio.cpp  gpio.h  mki217.cpp  mki217.h
examples/raspberry_pi/rpi_libs/: libcrypto.so.3  libcurl.so.4  libgnutls.so.30  libgpiod.so.2  liblber-2.5.so.0  libldap-2.5.so.0  libnghttp2.so.14  libresolv.so.2  libssh.so.4  libssl.so.3
examples/security/: CMakeLists.txt  Security.h
examples/server/: CMakeLists.txt  Server.h
examples/shared/FirmwareUpdater/: CMakeLists.txt  FirmwareUpdater.h
examples/shared/FirmwareUpdater/fw_examples/: SUCCESS.fw
examples/shared/platform/: CMakeLists.txt  Platform.cpp
examples/shared/platform/connection_dtls/: Connection.h
tests/: CMakeLists.txt  Platform.cpp  tests.sh
tests/catch2/: catch_amalgamated.cpp
tests/wpp/client/: WppClientTest.cpp
tests/wpp/client/task_queue/: WppTaskQueueTest.cpp
tests/wpp/platform/: WppPlatformTest.cpp
tests/wpp/platform/connection/: WppConnectionTest.cpp
tests/wpp/registry/: WppRegistryTest.cpp  typesTest.cpp
tests/wpp/utils/: SafeQueueTest.cpp
tests/wpp/utils/bindings/: WppBindingsTest.cpp
tests/wpp/utils/task_queue/: WppTaskQueueTest.cpp
wakaama_core/: CMakeLists.txt  WakaamaCore.cmake
wakaama_core/config/: config.cmake
wpp/: CMakeLists.txt  dep.cpp  wakaama.cmake  wpp.cmake
wpp/bindings/: WakaamaBindings.cpp
wpp/build_utils/: wpp_definitions_gen.cmake  wpp_headers_gen.cmake  wpp_headers_gen.sh
wpp/client/: CMakeLists.txt  WppClient.cpp  WppClient.h
wpp/client/bindings/: CMakeLists.txt  WakaamaBindings.cpp
wpp/client/connection/: WppConnectionI.cpp  WppConnectionI.h
wpp/client/platform/: CMakeLists.txt  WppPlatformI.cpp  WppPlatformI.h
wpp/client/task_queue/: WppTaskQueue.cpp  WppTaskQueue.h
wpp/config/: WppConfig.h  compiler_config.cmake  config.cmake  config.h  objects_config.cmake
wpp/configs/: compiler_config.cmake  objects_config.cmake  wakaama_config.cmake  wpp_config.cmake
wpp/connection/: CMakeLists.txt  IWppConnection.cpp  IWppConnection.h  WppConnection.cpp  WppConnection.h  WppConnectionI.cpp  WppConnectionI.h
wpp/core/: CMakeLists.txt  WppCore.cpp  WppCore.h
wpp/platform/: CMakeLists.txt  WppGuard.h  WppPlatform.cpp  WppPlatform.h
wpp/platform/connection/: CMakeLists.txt  WppConnection.cpp  WppConnection.h
wpp/registry/: CMakeLists.txt  ObjectID.h  ObjectInfo.h  WppRegistry.cpp  WppRegistry.h
wpp/registry/data_model/: CMakeLists.txt
wpp/registry/data_model/instance/: IInstObserver.h  IInstance.cpp  IInstance.h  IWppInstance.cpp  IWppInstance.h  Instance.cpp  Instance.h  InstanceI.cpp  InstanceI.h
wpp/registry/data_model/object/: IObjObserver.h  Lwm2mObject.h  Object.cpp  Object.h  ObjectImpl.h  ObjectSpec.h  WppObject.h
wpp/registry/data_model/resource/: Resource.cpp  Resource.h  ResourceContainer.cpp  ResourceContainer.h
wpp/registry/data_model/types/: InstOp.h  InstOperation.h  ItemOp.h  ObjectInfo.h  Operation.h  ResBlockOp.h  ResOp.h  ResOperation.h  WppObjectInfo.h  WppOperation.h  WppTypes.h  types.h
wpp/registry/model/instance/: Instance.h
wpp/registry/objects/: CMakeLists.txt
wpp/registry/objects/acl/: CMakeLists.txt
wpp/registry/objects/conn_monitoring/: ConnMonitoringConfig.h
wpp/registry/objects/device/: Device.cpp
wpp/registry/objects/device_1_2/: WppDevice.cpp  WppDevice.h
wpp/registry/objects/lwm2m_server_1_2/: CMakeLists.txt  (+3 more)
wpp/registry/utils/: utils.cpp  utils.h
wpp/utils/: CMakeLists.txt  SafeQueue.h  WppLogs.h
wpp/utils/bindings/: CMakeLists.txt  WppBindings.cpp  WppBindings.h
wpp/utils/task_queue/: CMakeLists.txt  WppTaskQueue.cpp  WppTaskQueue.h
(+2827 files in other folders)
